---
source: compiler-core/src/type_/tests/errors.rs
expression: "let #(a, secondValue) = #(1, 2)"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:10
  │
1 │ let #(a, secondValue) = #(1, 2)
  │          ^^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: second_value
